# ArcaVox

./: .gitignore  Cargo.toml  README.md  install_deps.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
analyzer_app/: Cargo.toml
analyzer_app/src/: frequencies.rs  levels.rs  main.rs
audio/: Cargo.toml
audio/src/: lib.rs  pitch.rs  synth.rs
audio/src/dsp/: fft.rs  filter.rs  mod.rs
audio/src/stream/: buffer.rs  executor.rs  input.rs  mod.rs  output.rs  pipeline.rs
charts/src/: lib.rs
notebook/src/: lib.rs
synth_app/src/: main.rs
ui/: Cargo.toml
ui/examples/: spectrogram.rs
ui/src/: coord.rs  lib.rs  spectrogram.rs
